# OrcaArrangeTestHarness

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat
parts/grid/: grid_rect_large_189.part  grid_rect_large_190.part  grid_rect_large_191.part  grid_rect_large_192.part  grid_rect_large_193.part  grid_rect_large_194.part  grid_rect_large_195.part  grid_rect_large_196.part  grid_rect_large_197.part  grid_rect_large_198.part  grid_rect_large_199.part  grid_rect_large_200.part  grid_rect_large_201.part  grid_rect_large_202.part  grid_rect_large_203.part  grid_rect_large_204.part  grid_rect_large_205.part  grid_rect_large_206.part  grid_rect_large_207.part  grid_rect_large_208.part  grid_rect_large_209.part  grid_rect_large_210.part  grid_rect_large_211.part  grid_rect_large_212.part  grid_rect_large_213.part  grid_rect_large_214.part  grid_rect_large_215.part  grid_rect_large_216.part  grid_rect_large_217.part  grid_rect_large_218.part  grid_rect_large_219.part  grid_rect_large_220.part  grid_rect_large_221.part  grid_rect_large_222.part  grid_rect_large_223.part  grid_rect_med_126.part  grid_rect_med_127.part  grid_rect_med_128.part  grid_rect_med_129.part  grid_rect_med_130.part  (+212 more)
parts/mechanical/: mechanical_L_large_438.part  mechanical_L_large_439.part  mechanical_L_large_440.part  mechanical_L_large_441.part  mechanical_L_large_442.part  mechanical_L_large_443.part  mechanical_L_large_444.part  mechanical_L_large_445.part  mechanical_L_large_446.part  mechanical_L_large_447.part  mechanical_L_large_448.part  mechanical_L_large_449.part  mechanical_L_med_376.part  mechanical_L_med_377.part  mechanical_L_med_378.part  mechanical_L_med_379.part  mechanical_L_med_380.part  mechanical_L_med_381.part  mechanical_L_med_382.part  mechanical_L_med_383.part  mechanical_L_med_384.part  mechanical_L_med_385.part  mechanical_L_med_386.part  mechanical_L_med_387.part  mechanical_L_small_314.part  mechanical_L_small_315.part  mechanical_L_small_316.part  mechanical_L_small_317.part  mechanical_L_small_318.part  mechanical_L_small_319.part  mechanical_L_small_320.part  mechanical_L_small_321.part  (+216 more)
src/: anti_gravity.hpp  arrange_stress.cpp  contestants.hpp  gravity.hpp  gravity_v2.hpp  part_generator.hpp
(+496 files in other folders)
